FAQ Spacing & Title fix
Changed faq spacing so whole button is clickable. Changed title to reflect title of page and prep for breadcrumb js

--- a/dev/scss/sections/_faq-section.scss
+++ b/dev/scss/sections/_faq-section.scss
@@ -8,7 +8,6 @@
             margin: 0 auto;
             .faq-item {
                 border: 2px solid #e7e7e7;
-                padding: 15px 15px 15px 0px;
 
                 &:not(:last-child) {
                     margin-bottom: variables.$xs-space;
@@ -21,7 +20,7 @@
                     text-align: left;
                     cursor: pointer;
                     position: relative;
-                    padding-left: 50px;
+                    padding: 15px 15px 15px 50px;
 
                     &::before {
                         content: '';
@@ -45,7 +44,7 @@
                 }
 
                 .faq-item__answer {
-                    padding: 10px 0px 0px 50px;
+                    padding: 0 15px 15px 50px;
                 }
             }
         }
